--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -5,6 +5,15 @@
   animation: meals-appear 1s ease-out forwards;
 }
 
+.Loading{
+  text-align: center;
+  color: white;
+}
+.nError{
+  text-align: center;
+  color: red;
+}
+
 .meals ul {
   list-style: none;
   margin: 0;
